CSS_skills language

--- a/index.html
+++ b/index.html
@@ -191,20 +191,35 @@
                 <ul>
                     <li class="language__bar">
                         <div class="language__bar__metadata">
-                            <span>English</span><span>90%</span>
+                            <span>English</span>
+                            <span>
+                                <span>●●●●●● &ensp; &ensp;</span>
+                                <span class="language_desr"> Native &ensp; &ensp;</span>
+                            </span>
                         </div>
-                    <div class="language__bar__bg">
-                        <div class= "language__bar__value" style="width: 90%"></div>
-                    </div>
                     </li>
+                    <li class="language__bar">
+                        <div class="language__bar__metadata">
+                            <span>Spanish</span>
+                            <span>
+                                <span>●●●●○○ &ensp;</span>
+                                <span class="language_desr"> Intermediate</span>
+                            </span>
+                        </div>
+                    </li>
+                    <li class="language__bar">
+                        <div class="language__bar__metadata">
+                            <span>Korean</span>
+                            <span>
+                                <span>●●●●●● &ensp; &ensp;</span>
+                                <span class="language_desr"> Native &ensp; &ensp;</span>
+                            </span>
+                        </div>
+                    </li>
+                    
 
 
-                    <div><span>Spanish</span><span>70%</span></div>
-                    <div><div style="width: 79%"></div></div>
-                    </li>
-                    <div><span>Korean</span><span>70%</span></div>
-                    <div><div style="width: 79%"></div></div>
-                    </li>
+                    
                 </ul>
             </section>
 
