CSS_project1_desc

--- a/index.html
+++ b/index.html
@@ -229,8 +229,10 @@
                     <div class="project_left">
                     <div class="project_desc">
                         <p class="description">Developed an open market service to buy and sell cosmetic products.</p>
-                        <p>FrontEnd: 3, Backend:6</p>
-                        <p>May 2024 - July 2024</p>
+                        <ul class="project_desc_list">
+                            <li><i class="fa-solid fa-user"></i>  &ensp; FrontEnd: 3, Backend:6</li>
+                            <li class="dates"><i class="fa-solid fa-calendar-days"></i>  &ensp; May 2024 - July 2024</li>
+                        </ul>
                     </div>
                     <div class="project_link">
                         <ul>
