CSS_project1_link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a class="header__menu__item" href="#home">Portfolio</a></li>
                 <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
-                <li><a class="header__menu__item" href="#project">Projects</a></li>
+                <li><a class="header__menu__item" href="#projects">Projects</a></li>
                 <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
                 <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
                 <li><a class="header__menu__item" href="#education">Education</a></li>
@@ -235,8 +235,19 @@
                         </ul>
                     </div>
                     <div class="project_link">
-                        <ul>
-                            <li></li>
+                        <ul class="project_link_list">
+                            <li>
+                                <a href="https://drugstoreproject-seyeons-projects-fed8a2e8.vercel.app/">Deploy Site</a>
+                            </li>
+                            <li>
+                                <a href="https://drugstoreproject.shop/swagger-ui/index.html">Swagger</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/DrugStoreWeb/DrugStore-BE">Github</a>
+                            </li>
+                            <li>
+                                <a href="https://www.youtube.com/watch?v=reaXKuAoctQ&feature=youtu.be">Demonstration Video</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="project_feature">
