--- a/index.html
+++ b/index.html
@@ -251,10 +251,12 @@
                         </ul>
                     </div>
                     <div class="project_feature">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="project_feature_list">
+                            <li>Signup, Login</li>
+                            <li>Register product</li>
+                            <li>Add product to cart</li>
+                            <li>Proceed to order</li>
+                            <li>Post review about product</li>
                         </ul>
                     </div>
                     </div>
