CSS_project1_desc left finish

--- a/index.html
+++ b/index.html
@@ -237,22 +237,22 @@
                     <div class="project_link">
                         <ul class="project_link_list">
                             <li>
-                                <a href="https://drugstoreproject-seyeons-projects-fed8a2e8.vercel.app/">Deploy Site</a>
+                                <a class="project_link_list_a" href="https://drugstoreproject-seyeons-projects-fed8a2e8.vercel.app/">Deploy Site</a>
                             </li>
                             <li>
-                                <a href="https://drugstoreproject.shop/swagger-ui/index.html">Swagger</a>
+                                <a class="project_link_list_a" href="https://drugstoreproject.shop/swagger-ui/index.html">Swagger</a>
                             </li>
                             <li>
-                                <a href="https://github.com/DrugStoreWeb/DrugStore-BE">Github</a>
+                                <a class="project_link_list_a" href="https://github.com/DrugStoreWeb/DrugStore-BE">Github</a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=reaXKuAoctQ&feature=youtu.be">Demonstration Video</a>
+                                <a class="project_link_list_a" href="https://www.youtube.com/watch?v=reaXKuAoctQ&feature=youtu.be">Demonstration Video</a>
                             </li>
                         </ul>
                     </div>
                     <div class="project_feature">
                         <ul class="project_feature_list">
-                            <li>Signup, Login</li>
+                            <li class="project_feature_list_item">Signup, Login</li>
                             <li>Register product</li>
                             <li>Add product to cart</li>
                             <li>Proceed to order</li>
