CSS_project1_pics

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </div>
                     <div class="project_feature">
                         <ul class="project_feature_list">
-                            <li class="project_feature_list_item">Signup, Login</li>
+                            <li>Signup, Login</li>
                             <li>Register product</li>
                             <li>Add product to cart</li>
                             <li>Proceed to order</li>
@@ -263,23 +263,31 @@
                     <div class="project_right">
                         <div class="project_photos">
                                 <div class="project_img_box">
-                                    <img class="project_img" src="images/erd.png" alt="Database Design" />
+                                    <img class="project_img" src="images/erd1.png" alt="Database Design" />
                                     <p>ERD</p>
                                 </div>
                                 <div class="project_img_box">
                                     <img class="project_img" src="images/main1.png" alt="Main Page" />
                                     <p>Main Page</p>
                                 </div>
+                                <!-- <div class="project_img_box">
+                                    <img class="project_img" src="images/cart1.png" alt="Cart Page" />
+                                    <p>Cart Page</p>
+                                </div> -->
                         </div>
                         <div class="project_photos">
                             <div class="project_img_box">
-                                <img class="project_img" src="images/erd.png" alt="Database Design" />
-                                <p>ERD</p>
+                                <img class="project_img" src="images/buy1.png" alt="My Orders" />
+                                <p>My Orders</p>
                             </div>
                             <div class="project_img_box">
-                                <img class="project_img" src="images/main1.png" alt="Main Page" />
-                                <p>Main Page</p>
+                                <img class="project_img" src="images/product1.png" alt="Product Page" />
+                                <p>Product Page</p>
                             </div>
+                            <!-- <div class="project_img_box">
+                                <img class="project_img" src="images/signup1.png" alt="Sign Up Page" />
+                                <p>Sign Up Page</p>
+                            </div> -->
                     </div>
                     </div> 
                 
