CSS_project1_font weight

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="project_feature">
+                    <!-- <div class="project_feature">
                         <ul class="project_feature_list">
                             <li>Signup, Login</li>
                             <li>Register product</li>
@@ -258,7 +258,7 @@
                             <li>Proceed to order</li>
                             <li>Post review about product</li>
                         </ul>
-                    </div>
+                    </div> -->
                     </div>
                     <div class="project_right">
                         <div class="project_photos">
@@ -291,10 +291,14 @@
                             </div>
                     </div>
                     </div> 
-                
                 </div>
+                    <!-- skills & trouble shooting -->
                     <div class="project_skills">
-                        <ul>
+                        <h3 class="project_skills_title"><i class="fa-solid fa-screwdriver-wrench"></i>  Skills and Tools </h3>
+                        <ul class="project_skills_list">
+                            <li> <span class="bold">HTTPS Encryption:</span> Configured Nginx, TLS, Route 53 for HTTPS domain. <br>
+                                Improved data transmission security with encryption and product registration speed reduced to 369ms(before 9.26s).
+                            </li>
                             <li></li>
                         </ul>
                     </div>
