CSS_project1_skills

--- a/index.html
+++ b/index.html
@@ -296,10 +296,20 @@
                     <div class="project_skills">
                         <h3 class="project_skills_title"><i class="fa-solid fa-screwdriver-wrench"></i>  Skills and Tools </h3>
                         <ul class="project_skills_list">
-                            <li> <span class="bold">HTTPS Encryption:</span> Configured Nginx, TLS, Route 53 for HTTPS domain. <br>
+                            <li class="project_skills_list_item"> <span class="bold">HTTPS Encryption:</span> Configured Nginx, TLS, Route 53 for HTTPS domain. <br>
                                 Improved data transmission security with encryption and product registration speed reduced to 369ms(before 9.26s).
                             </li>
-                            <li></li>
+                            <li class="project_skills_list_item"> <span class="bold">Identity Assessment and Management: </span> Applied AWS S3 and IAM for
+                                uploading multipart files, and controlling access. 
+                            </li>
+                            <li class="project_skills_list_item"> <span class="bold">Multi Factor Authentication: </span> Utilized Redis and Gmail SMTP for email
+                                verification. Incorporated one-time-code along with password for secure
+                                authentication.
+                            </li>
+                            <li class="project_skills_list_item"> <span class="bold">Role-based Functionality:</span> Different functionality is supported depending
+                                on the roles of seller and buyer, user and admin user, following the
+                                least-privilege principle.
+                            </li>
                         </ul>
                     </div>
                     <div class="project_ts">
