--- a/index.html
+++ b/index.html
@@ -396,11 +396,20 @@
         </section>
         <!-- certificate -->
         <section id="certificate" class="section">
+            <div class="max-container">
             <h2 class="title">Certificates</h2>
-            <section>
-                <h3>CompTia Security+</h3>
-                <img src="/images/SecurityPlus Logo Certified CE.png" alt="compTia">
-            </section>
+            <div class="certificate_comptia">
+                <div class="certificate_img">
+                    <img src="images/comptia.png" alt="compTia">
+                </div>
+                <div class="certificate_desc">
+                    <h3>CompTia Security+</h3>
+                    <p>Gained Knowledge about network, incident response. </p>
+                </div>
+                
+                
+            </div>
+        </div>
         </section>
 
         <!-- Masters Thesis -->
