--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </ul>
                     </div>
                     <div class="project_link">
-                        <ul class="project_link_list">
+                        <ul class="link">
                             <li>
                                 <a class="project_link_list_a" href="https://drugstoreproject-seyeons-projects-fed8a2e8.vercel.app/">Deploy Site</a>
                             </li>
@@ -413,14 +413,22 @@
         </section>
 
         <!-- Masters Thesis -->
-        <section id="thesis">
+        <section id="thesis" class="section">
+        <div class="max-container">
             <h2 class="title">Computer Science Education Masters Thesis</h2>
-            <h3>The effects of Data Science Education using Korean Python on Elementary Students' Computational Thinking</h3>
-            <p>March 2020 - June 2022</p>
-            <a href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
-            <li> Identified the necessity for a means to facilitate ESL students coding with python by using their native language.</li>
-            <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
-            <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
+            <h3 class="thesis_title">The effects of Data Science Education using Korean Python <br> on Elementary Students' Computational Thinking</h3>
+            <div>
+                <p class="dates"><i class="fa-solid fa-calendar-days"></i> March 2020 - June 2022</p>
+            </div>
+            <div>
+                <a class="link" href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
+            </div>
+            <div>
+                <li> Identified the necessity for a means to facilitate ESL students coding with python by using their native language.</li>
+                <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
+                <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
+            </div>
+        </div>
         </section>
 
         <!-- Education -->
