--- a/index.html
+++ b/index.html
@@ -415,20 +415,28 @@
         <!-- Masters Thesis -->
         <section id="thesis" class="section">
         <div class="max-container">
-            <h2 class="title">Computer Science Education Masters Thesis</h2>
-            <h3 class="thesis_title">The effects of Data Science Education using Korean Python <br> on Elementary Students' Computational Thinking</h3>
-            <div class="thesis_desc">
-                <div>
-                    <p class="dates"><i class="fa-solid fa-calendar-days"></i> March 2020 - June 2022</p>
+            <div class="thesis_container">
+                <h2 class="title">Computer Science Education Masters Thesis</h2>
+                <div class="title_box">
+                    <img src="images/univ.png" alt="Seoul National University of Education Masters Degree">
+                    <h3 class="thesis_title">The effects of Data Science Education using Korean Python <br> on Elementary Students' Computational Thinking</h3>
+                    
                 </div>
-                <div>
-                    <a class="link" href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
+                
+                <div class="thesis_desc">
+                    <div class="thesis_desc_item">Seoul National University Education Masters Degree</div>
+                    <div class="thesis_desc_item">
+                        <p class="dates"><i class="fa-solid fa-calendar-days"></i> March 2020 - June 2022</p>
+                    </div>
+                    <div class="thesis_desc_item">
+                        <a class="link" href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
+                    </div>
                 </div>
-                <div>
-                    <li> Identified the necessity for a means to facilitate ESL students coding with python by using their native language.</li>
-                    <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
-                    <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
-                </div>
+                    <div class="thesis_desc_list">
+                        <li> Identified the necessity for a means to facilitate ESL students coding with python by using their native language.</li>
+                        <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
+                        <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
+                    </div>
             </div>
         </div>
         </section>
