--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 
         <!-- Education -->
         <section id="education">
+        <div class="max-container">
             <h2 class="title">Education</h2>
             <div>
                 <h3>Backend Developer Course</h3>
@@ -454,6 +455,7 @@
                 <p>March 2020 - June 2022</p>
                 <p>Seoul National University of Education</p>
             </div>
+        </div>
         </section>
 
         <!-- Aditional Experience -->
