--- a/index.html
+++ b/index.html
@@ -442,19 +442,28 @@
         </section>
 
         <!-- Education -->
-        <section id="education">
+        <section id="education" class="section">
         <div class="max-container">
             <h2 class="title">Education</h2>
-            <div>
-                <h3>Backend Developer Course</h3>
-                <p>Nov. 2023 - July 2023</p>
-                <p>Super Coding Institute</p>
+            <div class="edu_container">
+            <div class="edu">
+                <div class="edu_img"> <img src="images/supercoding.png" alt="Super Coding Institute"> </div>
+                <div class="edu_desc">
+                    <h3 class="edu_title">Backend Developer Course</h3>
+                    <p class="dates"><i class="fa-solid fa-calendar-days"></i> Nov. 2023 - July 2023</p>
+                    <p>Super Coding Institute</p>
+                </div>
             </div>
-            <div>
-                <h3>Masters in Computer Science Education</h3>
-                <p>March 2020 - June 2022</p>
-                <p>Seoul National University of Education</p>
+            <div class="edu">
+                <div class="edu_img"> <img src="images/univ.png" alt="Seoul National University of Education"> </div>
+                <div class="edu_desc">
+                    <h3 class="edu_title">Masters in Computer Science Education</h3>
+                    <p class="dates"><i class="fa-solid fa-calendar-days"></i> March 2020 - June 2022</p>
+                    <p>Seoul National University of Education</p>
+                </div>
+                
             </div>
+        </div>
         </div>
         </section>
 
