CSS_aditional experience

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         <div class="max-container">
             <h2 class="title">Education</h2>
             <div class="edu_container">
-            <div class="edu">
+            <div class="edu_item">
                 <div class="edu_img"> <img src="images/supercoding.png" alt="Super Coding Institute"> </div>
                 <div class="edu_desc">
                     <h3 class="edu_title">Backend Developer Course</h3>
@@ -469,19 +469,23 @@
 
         <!-- Aditional Experience -->
         <section id="experience" class="section">
+            <div class="max-container">
             <h2 class="title">Additional Experience</h2>
-            <div>
-                <div>
-                    <img src="images/edu-remove.png" alt="edu ministry logo" />
-                </div>
-                <div>
-                    <h3>Elementary School Teacher</h3>
-                    <p>March 2020 - Feb. 2023</p>
-                    <p>Sineun Elementary School, Seoul, Korea</p>
-                    <li>Specialized in programming education for elementary students.</li>
-                    <li>Professional experience in coding education.</li>
+            <div class="exp_container">
+                <div class="exp_item">
+                    <div class="exp_img">
+                        <img src="images/edu-remove.png" alt="edu ministry logo" />
+                    </div>
+                    <div class="exp_desc">
+                        <h3 class="exp_title">Elementary School Teacher</h3>
+                        <p class="dates"> <i class="fa-solid fa-calendar-days"></i> March 2020 - Feb. 2023</p>
+                        <p>Sineun Elementary School, Seoul, Korea</p>
+                        <li>Specialized in programming education for elementary students.</li>
+                        <li>Professional experience in coding education.</li>
+                    </div>
                 </div>
             </div>
+        </div>
         </section>
     
 
