--- a/index.html
+++ b/index.html
@@ -454,14 +454,16 @@
                     <p>Super Coding Institute</p>
                 </div>
             </div>
-            <div class="edu">
+
+            <div class="edu_container">
+            <div class="edu_item">
                 <div class="edu_img"> <img src="images/univ.png" alt="Seoul National University of Education"> </div>
                 <div class="edu_desc">
                     <h3 class="edu_title">Masters in Computer Science Education</h3>
                     <p class="dates"><i class="fa-solid fa-calendar-days"></i> March 2020 - June 2022</p>
                     <p>Seoul National University of Education</p>
                 </div>
-                
+            </div>
             </div>
         </div>
         </div>
@@ -499,30 +501,36 @@
     <!-- Footer -->
     <footer id="contact" class="section">
         <h2 class="title">Contact</h2>
-        <p>
-            <i class="fa-solid fa-envelope"></i>
-            soheeparklee@gmail.com
-        </p>
-        <p>
-            <i class="fa-solid fa-phone"></i>
-            (+34)690721394
-        </p>
+        <div class="contact_box">
+            <li class="contact_item">
+                <p>
+                    <i class="fa-solid fa-envelope"></i> 
+                    soheeparklee@gmail.com
+                </p>
+            </li>
+            <li class="contact_item">
+                <p>
+                    <i class="fa-solid fa-phone"></i> 
+                    (+34) 690721394
+                </p>
+            </li>
+        </div>
         <ul>
-            <li>
+            <li class="contact_item">
                 <a href="https://github.com/soheeparklee">
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-github"></i> 
                     Github
                 </a>
             </li>
-            <li>
+            <li class="contact_item">
                 <a href="https://www.linkedin.com/in/so-hee-park-a8627329b/">
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-linkedin"></i> 
                     Linkedin
                 </a>
             </li>
-            <li>
+            <li class="contact_item">
                 <a href="https://soheeparklee.github.io/">
-                    <i class="fa-solid fa-globe"></i>
+                    <i class="fa-solid fa-globe"></i> 
                     Tech Blog
                 </a>
             </li>
