CSS_solve icons issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="So Hee Park's Portfolio">
     <link rel="shortcut icon" href="./images/hello.png" type="image/x-icon">
         <!-- OG (Open Graph Data) -->
-        <meta property="og:title" content="엘리의 포트폴리오" />
+        <meta property="og:title" content="Portfolio of So Hee Park" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="배포후 생성된 URL" />
         <meta property="og:image" content="배포후에 생성된 이미지 URL" />
@@ -16,8 +16,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"/>
         <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/9eb162ac0d.js" crossorigin="anonymous" ></script>
-        <!-- CSS -->
+        <script src="https://kit.fontawesome.com/1dad10d78a.js" crossorigin="anonymous"></script>        <!-- CSS -->
         <link rel="stylesheet" href="css/style.css" />
         <!-- Javascript -->
         <script src="src/main.js" defer></script>
@@ -82,27 +81,27 @@
             </p> -->
             <ul class="majors">
                 <li class="major">
-                <i class="fa-solid fa-code major__icon"></i>
-                <p class="major__title">Hard Skills</p>
-                    <p class="major__detail">Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
-                    <p class="major__detail">AWS, MySQL, SQL, MariaDB</p>
-                    <p class="major__detail">MS Word, Excel, Powerpoint</p>
+                    <i class="fa-solid fa-code major__icon"></i>
+                    <p class="major__title">Hard Skills</p>
+                        <p class="major__detail">Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
+                        <p class="major__detail">AWS, MySQL, SQL, MariaDB</p>
+                        <p class="major__detail">MS Word, Excel, Powerpoint</p>
                 </li>
 
                 <li class="major">
-                <i class="fa-solid fa-screwdriver-wrench major__icon"></i>
-                <p class="major__title">Soft Skills</p>
-                    <p class="major__detail">Leadership</p>
-                    <p class="major__detail">Goal-Oriented</p>
-                    <p class="major__detail">Adventurous</p>
+                    <i class="fa-solid fa-screwdriver-wrench major__icon"></i>
+                    <p class="major__title">Soft Skills</p>
+                        <p class="major__detail">Leadership</p>
+                        <p class="major__detail">Goal-Oriented</p>
+                        <p class="major__detail">Adventurous</p>
                 </li>
 
                 <li class="major">
-                <i class="fa-solid fa-comment major__icon"></i>
-                <p class="major__title">Languages</p>
-                    <p class="major__detail">English(native)</p>
-                    <p class="major__detail">Spanish(advanced)</p>
-                    <p class="major__detail">Korean(native)</p>
+                    <i class="fa-solid fa-comment major__icon"></i>
+                    <p class="major__title">Languages</p>
+                        <p class="major__detail">English(native)</p>
+                        <p class="major__detail">Spanish(advanced)</p>
+                        <p class="major__detail">Korean(native)</p>
                 </li>
             </ul>
             
@@ -517,8 +516,8 @@
         </div>
         <ul>
             <li class="contact_item">
+                <i class="fa-brands fa-github"></i> 
                 <a href="https://github.com/soheeparklee">
-                    <i class="fa-brands fa-github"></i> 
                     Github
                 </a>
             </li>
