--- a/index.html
+++ b/index.html
@@ -516,19 +516,19 @@
         </div>
         <ul>
             <li class="contact_item">
-                <i class="fa-brands fa-github"></i> 
-                <a href="https://github.com/soheeparklee">
+                <a class="contact_link" href="https://github.com/soheeparklee">
+                    <i class="fa-brands fa-github"></i> 
                     Github
                 </a>
             </li>
             <li class="contact_item">
-                <a href="https://www.linkedin.com/in/so-hee-park-a8627329b/">
+                <a class="contact_link" href="https://www.linkedin.com/in/so-hee-park-a8627329b/">
                     <i class="fa-brands fa-linkedin"></i> 
                     Linkedin
                 </a>
             </li>
             <li class="contact_item">
-                <a href="https://soheeparklee.github.io/">
+                <a class="contact_link" href="https://soheeparklee.github.io/">
                     <i class="fa-solid fa-globe"></i> 
                     Tech Blog
                 </a>
