CSS_line height

--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
                 <li class="major">
                     <i class="fa-solid fa-code major__icon"></i>
                     <p class="major__title">Hard Skills</p>
-                        <p class="major__detail">Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
-                        <p class="major__detail">AWS, MySQL, SQL, MariaDB</p>
-                        <p class="major__detail">MS Word, Excel, Powerpoint</p>
+                        <p class="major__hard__detail">Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
+                        <p class="major__hard__detail">AWS, MySQL, SQL, MariaDB</p>
+                        <p class="major__hard__detail">MS Word, Excel, Powerpoint</p>
                 </li>
 
                 <li class="major">
                     <i class="fa-solid fa-screwdriver-wrench major__icon"></i>
                     <p class="major__title">Soft Skills</p>
-                        <p class="major__detail">Leadership</p>
-                        <p class="major__detail">Goal-Oriented</p>
-                        <p class="major__detail">Adventurous</p>
+                        <p class="major__soft__detail">Leadership</p>
+                        <p class="major__soft__detail">Goal-Oriented</p>
+                        <p class="major__soft__detail">Adventurous</p>
                 </li>
 
                 <li class="major">
                     <i class="fa-solid fa-comment major__icon"></i>
                     <p class="major__title">Languages</p>
-                        <p class="major__detail">English(native)</p>
-                        <p class="major__detail">Spanish(advanced)</p>
-                        <p class="major__detail">Korean(native)</p>
+                        <p class="major__language__detail">English(native)</p>
+                        <p class="major__language__detail">Spanish(advanced)</p>
+                        <p class="major__language__detail">Korean(native)</p>
                 </li>
             </ul>
             
